# example-rag-app

./: .env.example  .gitignore  Dockerfile  Justfile  LICENSE  README.md  compose.yml  pyproject.toml
infra/qdrant/: create_collection.py
misc/langfuse/: compose.yml
misc/litellm/: litellm_config.yml
misc/qdrant/: create_collection.py
src/rag/: __init__.py  agent.py  config.py  types.py
src/rag/agent/: __init__.py  system_prompt.txt  tools.json
src/rag/components/: __init__.py
src/rag/components/chat/: __init__.py  openai_chat.py
src/rag/components/embed/: __init__.py  openai_embed.py
src/rag/components/inference/: __init__.py  _protocol.py  openai_inference.py
src/rag/components/search/: __init__.py  _protocol.py  qdrant_search.py
src/rag/entrypoints/: __init__.py
src/rag/entrypoints/cli/: __init__.py  tui.py
src/rag/entrypoints/rest/: __init__.py  models.py
src/rag/types/: __init__.py  agent.py  chat.py  embed.py  messages.py  search.py
tests/e2e/: conftest.py  test_api.py  test_cli.py
tests/integration/: conftest.py  test_agent.py
tests/integration/agent/: test_agent.py
tests/integration/chat/: test_openai_chat.py
tests/integration/embed/: test_openai_embed.py
tests/integration/inference/: test_openai.py
tests/integration/search/: test_qdrant.py
tests/unit/: conftest.py  test_agent_methods.py  test_config.py
tests/unit/agent/: test_agent_methods.py
tests/unit/chat/: test_openai_chat_methods.py
tests/unit/config/: test_config.py
tests/unit/embed/: test_openai_embed_methods.py
tests/unit/inference/: test_openai_methods.py
tests/unit/search/: test_qdrant_methods.py
